--- a/package.json
+++ b/package.json
@@ -3,20 +3,26 @@
   "version": "1.0.0",
   "private": true,
   "description": "diam",
-  "author": "clgtj91",
+  "author": "clgtj97",
   "keywords": [
     "gatsby"
   ],
   "scripts": {
-    "develop": "gatsby develop",
+    "develop": "ENABLE_GATSBY_REFRESH_ENDPOINT=true gatsby develop",
     "start": "gatsby develop",
     "build": "gatsby build",
     "serve": "gatsby serve",
     "clean": "gatsby clean"
   },
   "dependencies": {
+    "@stripe/stripe-js": "^1.46.0",
+    "bootstrap": "^5.2.3",
+    "bulma": "^0.9.4",
     "gatsby": "^5.5.0",
+    "gatsby-plugin-sass": "^6.5.0",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "react-router-dom": "^6.9.0",
+    "sass": "^1.58.0"
   }
 }
