--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
     "bootstrap": "^5.2.3",
     "bulma": "^0.9.4",
     "express": "^4.17.1",
-    "gatsby": "^5.11.0",
+    "gatsby": "^5.12.11",
     "gatsby-plugin-sass": "^6.5.0",
     "http-proxy-middleware": "^2.0.6",
     "react": "^18.2.0",
@@ -30,7 +30,7 @@
     "stripe": "^12.11.0"
   },
   "devDependencies": {
-    "concurrently": "4.1.2"
+    "concurrently": "^8.2.2"
   },
   "homepage": "http://localhost:8000",
   "proxy": "http://localhost:4242"
