local server fix

--- a/package.json
+++ b/package.json
@@ -18,19 +18,16 @@
   },
   "dependencies": {
     "@stripe/react-stripe-js": "^2.1.1",
-<<<<<<< HEAD
     "@stripe/stripe-js": "^1.54.2",
     "bootstrap": "^5.2.3",
     "bulma": "^0.9.4",
     "express": "^4.17.1",
     "gatsby": "^5.12.11",
-=======
     "@stripe/stripe-js": "^1.54.1",
     "bootstrap": "^5.2.3",
     "bulma": "^0.9.4",
     "express": "^4.17.1",
     "gatsby": "^5.11.0",
->>>>>>> 19f4351 (netlify.toml update-1)
     "gatsby-plugin-sass": "^6.5.0",
     "http-proxy-middleware": "^2.0.6",
     "react": "^18.2.0",
@@ -40,11 +37,8 @@
     "stripe": "^12.11.0"
   },
   "devDependencies": {
-<<<<<<< HEAD
-    "concurrently": "^8.2.2"
-=======
+    "concurrently": "^8.2.2",
     "concurrently": "4.1.2"
->>>>>>> 19f4351 (netlify.toml update-1)
   },
   "homepage": "http://localhost:8000",
   "proxy": "http://localhost:4242"
