--- a/package.json
+++ b/package.json
@@ -16,6 +16,9 @@
     "netlify-build": "gatsby build",
     "netlify-functions": "netlify-lambda build functions"
   },
+  "engines": {
+    "node": "14.x"
+  },
   "dependencies": {
     "@stripe/react-stripe-js": "^2.1.1",
     "@stripe/stripe-js": "^1.54.2",
