--- a/package.json
+++ b/package.json
@@ -4,9 +4,7 @@
   "private": true,
   "description": "diam",
   "author": "clgtj97",
-  "keywords": [
-    "gatsby"
-  ],
+  "keywords": ["gatsby"],
   "scripts": {
     "develop": "ENABLE_GATSBY_REFRESH_ENDPOINT=true gatsby develop",
     "start": "concurrently \"gatsby develop\" \"node server.js\"",
@@ -26,11 +24,6 @@
     "bulma": "^0.9.4",
     "express": "^4.17.1",
     "gatsby": "^5.12.11",
-    "@stripe/stripe-js": "^1.54.1",
-    "bootstrap": "^5.2.3",
-    "bulma": "^0.9.4",
-    "express": "^4.17.1",
-    "gatsby": "^5.11.0",
     "gatsby-plugin-sass": "^6.5.0",
     "http-proxy-middleware": "^2.0.6",
     "react": "^18.2.0",
@@ -40,8 +33,7 @@
     "stripe": "^12.11.0"
   },
   "devDependencies": {
-    "concurrently": "^8.2.2",
-    "concurrently": "4.1.2"
+    "concurrently": "^8.2.2"
   },
   "homepage": "http://localhost:8000",
   "proxy": "http://localhost:4242"
